--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,32 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.App{
+  display: grid
+  ;
+      justify-content: center;
+}
+main{
+  text-align: center;
+  width: 300px;
+    text-align: center;
+    padding: 50px;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    display: grid;
+    margin-top: 30px;
+}
+.form{
+  width: 50%;
+}
+input{
+  height: 50px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+}
+button{
+  font-size: 25px;
+  padding: 5px;
+  border-radius: 5px;
+  background: black;
+  color: #fff;
+}
